add some config

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,73 +1,84 @@
 
-# ===========================
-# Kitty Config - Clean & Sharp
-# ===========================
+# ───────────────────────────────
+# 🌿 Zen Meadow Theme for Kitty
+# Inspired by nature tones
+# ───────────────────────────────
 
-# Font
-font_family      Mononoki Nerd Font
-bold_font        auto
-italic_font      auto
-bold_italic_font auto
-font_size        10
+# --- Font ---
+font_family             Mononoki Nerd Font
+bold_font               auto
+italic_font             auto
+bold_italic_font        auto
+font_size               10
+font_rendering_legacy_mode no
 
-# Window look
-window_padding_width 0
-window_margin_width  0
-window_border_width  0
-hide_window_decorations yes 
-background_opacity 0.8
-background_blur 40
+# --- Window look ---
+window_padding_width    8
+window_margin_width     0
+window_border_width     0
+hide_window_decorations yes
 
-# Cursor
+# --- Transparency and Blur ---
+background_opacity      0.9
+background_blur         40
+
+# --- Cursor ---
 cursor_shape beam
 cursor_blink true
-cursor_blink_interval -1
+cursor_blink_interval   -1
 cursor_stop_blinking_after 15.0
-# Scrollback
-scrollback_lines 2000
-scrollback_pager less
-cursor_trail 10
-cursor_trail_star_theshold 0
-cursor_trail_decay 0.1 0.4
+cursor_motion_smooth 1
+cursor_trail 12
+cursor_trail_decay 0.08 0.35
+cursor_trail_tint #d4deb2 0.15
 
+# --- Scrollback ---
+scrollback_lines        2000
+scrollback_pager        less
 
-# Keyboard shortcuts
+# --- Keyboard shortcuts ---
 map ctrl+shift+c copy_to_clipboard
 map ctrl+shift+v paste_from_clipboard
 
-# ===========================
-# Ayu Dark Theme Colors
-# ===========================
-background #0A0E14
-foreground #B3B1AD
-cursor     #acc1e3
-selection_background #273747
-selection_foreground #E6E1CF
-
-# Normal colors
-color0  #01060E
-color1  #EA6C73
-color2  #91B362
-color3  #F9AF4F
-color4  #53BDFA
-color5  #FAE994
-color6  #90E1C6
-color7  #C7C7C7
-
-# Bright colors
-color8  #686868
-color9  #F07178
-color10 #C2D94C
-color11 #FFB454
-color12 #59C2FF
-color13 #FFEE99
-color14 #95E6CB
-color15 #FFFFFF
-
-# Terminal behavior
+# --- Terminal behavior ---
 confirm_os_window_close 0
-allow_remote_control yes
-shell_integration no
+allow_remote_control    yes
+shell_integration       no
 
-# Unicode / Emoji support
+# --- Unicode / Emoji support ---
 symbol_map U+23FB-U+23FE,U+2B58,U+1F5A4,U+1F337,U+1F338,U+1F339,U+1F33A,U+1F33B,U+1F33C,U+1F33D,U+1F33E,U+1F33F,U+1F340,U+1F341,U+1F342,U+1F343 emoji
+
+# ───────────────────────────────
+# 🎨 Zen Meadow Color Palette
+# ───────────────────────────────
+
+foreground  #f4f7e6
+background  #0F0F0B
+
+# ANSI Colors
+color0  #1e2018
+color8  #4a4f3a
+
+color1  #cc6666
+color9  #d97a4f
+
+color2  #a6b95d
+color10 #98a75a
+
+color3  #e0b14a
+color11 #f4f7e6
+
+color4  #7796b4
+color12 #9c81a9
+
+color5  #d279a3
+color13 #d4deb2
+
+color6  #7c9b43
+color14 #a6b95d
+
+color7  #d4deb2
+color15 #f4f7e6
+
+# URL underline
+url_color #a6b95d
