adjust and change color a little bit

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -26,12 +26,13 @@ bind - split-window -v
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'wfxr/tmux-power'
 
+set -g @tmux_power_theme '#1b2421'
 # Gradient colors (used for custom themes)
-set -g @tmux_power_g0 "#4a4a4a"
-set -g @tmux_power_g1 "#595959"  
-set -g @tmux_power_g2 "#4a4848"
-set -g @tmux_power_g3 "#454545"
-set -g @tmux_power_g4 "#e3e3e3"
+set -g @tmux_power_g0 "#728c6e"
+set -g @tmux_power_g1 "#7ea66a"  
+set -g @tmux_power_g2 "#a5bfa4"
+set -g @tmux_power_g3 "#c5d8b6"
+set -g @tmux_power_g4 "#c3d9cc"
 
 # Format settings
 set -g @tmux_power_date_format '%F'
