--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -5,12 +5,13 @@
 # ───────────────────────────────
 
 # --- Font ---
-font_family             Mononoki Nerd Font
+font_family             psudoFont Liga Mono
 bold_font               auto
 italic_font             auto
 bold_italic_font        auto
 font_size               10
 font_rendering_legacy_mode no
+# font_features           psudoFont Liga Mono:style=Regular +liga
 
 # --- Window look ---
 window_padding_width    8
