make it support some font

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,8 +1,10 @@
-set -g default-terminal "screen-256color"
+# --- Tmux Basic Settings ---
+set -g default-terminal "tmux-256color"
+set-option -sa terminal-features ',xterm-kitty:RGB'
 
-set -g prefix C-a
+set -g prefix C-n
 unbind C-b
-bind-key C-a send-prefix
+bind-key C-n send-prefix
 
 # Reload shortcut
 unbind r
@@ -22,10 +24,11 @@ bind | split-window -h
 unbind '"'
 bind - split-window -v
 
-# Plugins
+# --- Plugins ---
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'wfxr/tmux-power'
 
+# --- Tmux-power Theme ---
 set -g @tmux_power_theme '#1b2421'
 # Gradient colors (used for custom themes)
 set -g @tmux_power_g0 "#728c6e"
@@ -41,8 +44,8 @@ set -g @tmux_power_time_format '%T'
 # Display settings
 set -g @tmux_power_show_user    false
 set -g @tmux_power_show_host    true
-set -g @tmux_power_show_session true
 
+set -g @tmux_power_show_session true
 # Icon settings
 set -g @tmux_power_date_icon            ' '
 set -g @tmux_power_time_icon            ' '
@@ -50,8 +53,9 @@ set -g @tmux_power_user_icon            ' '
 set -g @tmux_power_session_icon         ' '
 set -g @tmux_power_right_arrow_icon     ''
 set -g @tmux_power_left_arrow_icon      ''
-set -g @tmux_power_upload_speed_icon    '󰕒'
-set -g @tmux_power_download_speed_icon  '󰇚'
+set -g @tmux_power_upload_speed_icon    '  '
+set -g @tmux_power_download_speed_icon  '  '
 
-
+# --- Run TPM ---
 run '~/.tmux/plugins/tpm/tpm'
+
