--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,6 +1,6 @@
 
 # ───────────────────────────────
-# 🌿 Zen Meadow Theme for Kitty
+# 🌿 Zen resprite Theme for Kitty
 # Inspired by nature tones
 # ───────────────────────────────
 
@@ -11,7 +11,6 @@ italic_font             auto
 bold_italic_font        auto
 font_size               10
 font_rendering_legacy_mode no
-# font_features           psudoFont Liga Mono:style=Regular +liga
 
 # --- Window look ---
 window_padding_width    8
